# gsr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.json  pyproject.toml  release.sh  requirements.txt  run.sh  setup.sh  setup_desktop.py
.github/workflows/: ci.yml
docs/: LAUNCH_PLAN.md  PACKAGING_GUIDE.md  PROJECT_CHARTER.md  PROJECT_PLAN.md  gsr.1
scripts/: release.sh  run.sh  setup.sh  setup_desktop.py
src/: main.py  recorder.py  ui.py
