[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gsr"
version = "1.0.2"
authors = [
  { name="Gerald Snyman", email="gsvvcoza@gmail.com" },
]
description = "Gerald's Screen Recorder, a lightweight, motion-optimized screen recorder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "customtkinter>=5.2.0",
    "packaging",
    "pynput>=1.7.0"
]

[project.scripts]
gsr = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "recorder", "ui"]
